# gworkspace-access

./: .gitignore  API-TESTING.md  AUTHENTICATION.md  CHAT.md  CLAUDE.md  CONTRIBUTING.md  GOOGLE-API-ACCESS.md  LICENSE  MCP-SERVER.md  PROFILES.md  QUOTAS.md  README.md  TESTING.md  TODO.md  pyproject.toml  setup.py
docs/: CLAUDE-CODE.md  GEMINI-CLI.md  RELEASE_NOTES.md
gwsa/: __init__.py
gwsa/cli/: __init__.py  __main__.py  chat.py  client_commands.py  config.py  config_commands.py  decorators.py  docs_commands.py  drive_commands.py  profiles.py  profiles_commands.py  setup_local.py  sheets_commands.py  status.py  token_commands.py
gwsa/cli/auth/: __init__.py  check_access.py  scopes.py
gwsa/cli/mail/: __init__.py  label.py  read.py  search.py  threads.py
gwsa/mcp/: __init__.py  server.py
gwsa/sdk/: __init__.py  auth.py  cache.py  chat.py  config.py  exceptions.py  people.py  profiles.py  timing.py
gwsa/sdk/chat/: __init__.py  service.py  triage.py
gwsa_cli/: __init__.py  __main__.py  config.py  config_commands.py  decorators.py  profiles.py  setup_local.py  sheets_commands.py
gwsa_cli/auth/: __init__.py  check_access.py  create_token.py  scopes.py
gwsa_cli/mail/: __init__.py  label.py  read.py  search.py
scripts/: test-api-access.py  test-api-access.yaml.example
tests/: config.yaml  conftest.py  test-config.yaml
tests/integration/: test_mail_create.py  test_mail_modify.py  test_mail_read.py  test_mail_search.py
tests/unit/: conftest.py  test_client_cli.py  test_profiles_cli.py  test_profiles_sdk.py  test_status.py  test_token_setup.py
(+22 files in other folders)
